# AReaL

./: AGENTS.md  README.md  pyproject.vllm.toml
areal/api/: __init__.py  cli_args.py  engine_api.py  loss_api.py
areal/dataset/: gsm8k.py
areal/engine/: fsdp_engine.py  megatron_engine.py  sglang_remote.py
areal/infra/: remote_inf_engine.py
areal/trainer/: rl_trainer.py
areal/utils/: data.py  hf_utils.py  logging.py
docs/en/: cli_reference.md
docs/zh/: cli_reference.md
examples/math/: gsm8k_grpo.yaml
geo_edit/: README.md  config.py  eval_datasets.py  requirements.txt
geo_edit/data_preprocess/: convert_trajectory_to_sft.py
geo_edit/evaluation/: eval_unified.py
geo_edit/scripts/: async_generate_with_tool_call_api.py  launch_cantainer.sh  run_checkpoints_eval.sh  run_eval.sh  run_inference.sh  run_model_benchmark.sh  run_pedia_8b_v1_mmsi_3temps.sh  run_pedia_8b_v1_tool_3temps.sh  run_pedia_8b_v1_tool_7more_3temps.sh  run_pedia_8b_v1_tool_t10.sh  (+3 more)
llamafactory/: README.md  requirements.txt
tests/: test_cispo_loss.py  test_eval_dispatch.py  test_gen_hparams_stop_token_ids.py  test_grouped_rollout_min_valid.py  test_gsm8k_dataset.py  test_loss_reduction.py  test_megatron_engine.py  test_norm_group_size_derivation.py  test_partial_group_norm.py  test_ppo_stats.py  test_prompt_mean_loss.py  test_stats_tracker_export.py  test_tree_training.py
train_tool_server/: README.md  pyproject.toml  setup.py
train_tool_server/scripts/: launch_tool_server.sh  setup_env.sh
train_tool_server/train_tool_server/: __init__.py  router.py  server.py
train_tool_server/train_tool_server/tools/: base.py
verl-tool/: requirements.txt
(+59 files in other folders)
